--- a/aula-8/package.json
+++ b/aula-8/package.json
@@ -10,8 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv-safe": "^6.1.0",
     "express": "^4.16.4",
     "joi": "^14.0.6",
-    "nodemon": "^1.18.6"
+    "jsonwebtoken": "^8.4.0"
   }
 }
